--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">	
 </head>
-<body  style="background:grey;">
+<body  style="background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);">
 	<div class="container">
 		<div class="row" style="height: 700px;">
 			<div class="col-md-3"></div>
