--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">	
 </head>
-<body  style="background:#27332F;">
+<body  style="background:gray;">
 	<div class="container">
 		<div class="row" style="height: 700px;">
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
 				<div class="card" style="margin-top: 20px;">
-					<div class="card-header" style="text-align: center;"><h4>ESTIMATOR</h4></div>
+					<div class="card-header" style="text-align: center;"><h3>ESTIMATOR</h3></div>
 					<div class="card-body">
 						<form>
 						  <div class="md-form form-group mt-5">
