--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							  <option value="2">Months</option>
 							</select>
 						  </div>
-						  <div style="text-align: center;"><button class="btn btn-primary btn-md" type="submit">SUBMIT</button></div>
+						  <div style="text-align: center;"><button class="btn btn-secondary btn-md" type="submit">SUBMIT</button></div>
 						</form>
 					</div>
 				</div>	
