fixed missing select value attribute

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 						  </div>
 						  <div class="md-form form-group">
 						  	<select class="browser-default custom-select" id="data-period-type">
-							  <option selected>Days</option>
-							  <option value="1">Weeks</option>
-							  <option value="2">Months</option>
+							  <option selected="days">Days</option>
+							  <option value="weeks">Weeks</option>
+							  <option value="months">Months</option>
 							</select>
 						  </div>
 						  <div style="text-align: center;"><button class="btn btn-secondary btn-md" type="submit">SUBMIT</button></div>
